--- a/YueTiku-admin/src/main/resources/application.yml
+++ b/YueTiku-admin/src/main/resources/application.yml
@@ -15,6 +15,14 @@ spring:
     username: ${database.username}    # 数据库用户名
     password: ${database.password}    # 数据库密码
 
+    #ai相关配置
+  ai:
+    dashscope:
+      api-key: ${ai.api-key}
+      chat:
+        options:
+          model: ${ai.model}
+
 # MyBatis 配置
 mybatis:
   mapper-locations: classpath*:mapper/**/*.xml  # Mapper文件位置
