--- a/YueTiku-admin/pom.xml
+++ b/YueTiku-admin/pom.xml
@@ -57,6 +57,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dashscope-sdk-java</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.openai</groupId>
             <artifactId>openai-java</artifactId>
         </dependency>
